// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > handles synchronous deployment failures correctly 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-3"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Result
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Deployment Name
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  bicep-deploy-1737601964200
                  <a
                    href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2Fa790367f-228f-43fd-a660-ed9abb7258ef%2FresourceGroups%2FmockRg%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fbicep-deploy-1737601964200"
                    style="vertical-align: middle;"
                    title="Open in Portal"
                  >
                     
                    <div
                      aria-hidden="true"
                      class="sc-hvigdm gDPfJL codicon codicon-globe"
                      data-testid="globe-codicon"
                    />
                  </a>
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Failed
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <vscode-checkbox
          aria-invalid="false"
          internals-valid=""
        >
          Show JSON?
        </vscode-checkbox>
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Message
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Error: Deployment failed
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`App > renders the App component with deployment state 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-1"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App > renders the loading spinner before initialization 1`] = `
<div>
  <vscode-progress-ring />
</div>
`;

exports[`App > runs a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-2"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Result
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Deployment Name
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  bicep-deploy-1737601964200
                  <a
                    href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/blade/HubsExtension/DeploymentDetailsBlade/overview/id/%2Fsubscriptions%2Fa790367f-228f-43fd-a660-ed9abb7258ef%2FresourceGroups%2FmockRg%2Fproviders%2FMicrosoft.Resources%2Fdeployments%2Fbicep-deploy-1737601964200"
                    style="vertical-align: middle;"
                    title="Open in Portal"
                  >
                     
                    <div
                      aria-hidden="true"
                      class="sc-hvigdm gDPfJL codicon codicon-globe"
                      data-testid="globe-codicon"
                    />
                  </a>
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Succeeded
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Operations
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
          >
            <vscode-table-header-cell
              role="columnheader"
            >
              Resource Name
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Resource Type
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Operation
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              State
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Status
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                fooAccount
                <a
                  href="https://portal.azure.com/#@9eeeb42f-40a5-4229-849f-a71fae26c89f/resource/subscriptions/a790367f-228f-43fd-a660-ed9abb7258ef/resourceGroups/mockRg/providers/Microsoft.Storage/storageAccounts/fooAccount"
                  style="vertical-align: middle;"
                  title="Open in Portal"
                >
                   
                  <div
                    aria-hidden="true"
                    class="sc-hvigdm gDPfJL codicon codicon-globe"
                    data-testid="globe-codicon"
                  />
                </a>
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Microsoft.Storage/storageAccounts
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Create
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Succeeded
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <pre
                  class="code-wrapped"
                />
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Outputs
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
          >
            <vscode-table-header-cell
              role="columnheader"
            >
              Name
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Value
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                foo
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <pre
                  class="code-wrapped"
                >
                  "bar"
                </pre>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`App > supports the scope picker 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  newSubscriptionId
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  newResourceGroup
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-6"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`App > validates a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-4"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Result
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Failed
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <vscode-checkbox
          aria-invalid="false"
          internals-valid=""
        >
          Show JSON?
        </vscode-checkbox>
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Code
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                InvalidTemplate
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Message
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                The template is invalid
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;

exports[`App > what-ifs a deployment 1`] = `
<div>
  <main
    id="webview-body"
  >
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Deployment Scope
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Subscription Id
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  a790367f-228f-43fd-a660-ed9abb7258ef
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Resource Group
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  mockRg
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Change Scope
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Parameters
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-button
          role="button"
          tabindex="0"
          type="button"
        >
          Pick JSON Parameters File
        </vscode-button>
        <span
          class="input-row"
        >
          <vscode-label
            for=""
            id="vscode-label-5"
          >
            fooParam
          </vscode-label>
          <vscode-textfield
            type="text"
          />
        </span>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Actions
        </h3>
      </div>
      <div
        class="form-content"
      >
        <div
          class="controls"
        >
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Deploy
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            Validate
          </vscode-button>
          <vscode-button
            role="button"
            tabindex="0"
            type="button"
          >
            What-If
          </vscode-button>
        </div>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          Result
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                Status
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-badge
                  variant="default"
                >
                  Succeeded
                </vscode-badge>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
    <section
      class="form-section"
    >
      <vscode-divider
        role="separator"
      />
      <div
        class="form-title"
      >
        <div
          aria-hidden="true"
          class="sc-hvigdm cUFKKa codicon codicon-chevron-up"
          data-testid="chevron-up-codicon"
        />
        <h3>
          What-If Changes
        </h3>
      </div>
      <div
        class="form-content"
      >
        <vscode-table
          role="table"
        >
          <vscode-table-header
            role="rowgroup"
          >
            <vscode-table-header-cell
              role="columnheader"
            >
              Resource Id
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Change Type
            </vscode-table-header-cell>
            <vscode-table-header-cell
              role="columnheader"
            >
              Changes
            </vscode-table-header-cell>
          </vscode-table-header>
          <vscode-table-body
            role="rowgroup"
          >
            <vscode-table-row
              role="row"
            >
              <vscode-table-cell
                role="cell"
              >
                /subscriptions/a790367f-228f-43fd-a660-ed9abb7258ef/resourceGroups/mockRg/providers/Microsoft.Storage/storageAccounts/fooAccount
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                Create
              </vscode-table-cell>
              <vscode-table-cell
                role="cell"
              >
                <vscode-table
                  role="table"
                >
                  <vscode-table-header
                    role="rowgroup"
                  >
                    <vscode-table-header-cell
                      role="columnheader"
                    >
                      Path
                    </vscode-table-header-cell>
                    <vscode-table-header-cell
                      role="columnheader"
                    >
                      Change Type
                    </vscode-table-header-cell>
                  </vscode-table-header>
                  <vscode-table-body
                    role="rowgroup"
                  >
                    <vscode-table-row
                      role="row"
                    >
                      <vscode-table-cell
                        role="cell"
                      >
                        properties
                      </vscode-table-cell>
                      <vscode-table-cell
                        role="cell"
                      >
                        Create
                      </vscode-table-cell>
                    </vscode-table-row>
                  </vscode-table-body>
                </vscode-table>
              </vscode-table-cell>
            </vscode-table-row>
          </vscode-table-body>
        </vscode-table>
      </div>
    </section>
  </main>
</div>
`;
